--- a/backend/package.json
+++ b/backend/package.json
@@ -21,12 +21,15 @@
     "@ajayos/nodelogger": "^1.0.6",
     "@ajayos/nodemon": "^0.0.5",
     "body-parser": "^1.20.2",
+    "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.3.2",
     "node-schedule": "^2.1.1",
     "os": "^0.1.2",
     "path": "^0.12.7",
