--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -13,6 +13,8 @@
 
 # misc
 .DS_Store
+*.env
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -24,4 +26,3 @@ yarn-error.log*
 
 node_modules/
 package-lock.json
-.env
